<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">#life</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="legal_by">By creating an account and signing</string>
    <string name="legal_by_1">up to #life, I accept the</string>
    <string name="legal_by_2">Terms of Service and Privacy Policy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting…</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="banned_text">oh crap, you were banned from the app!</string>
    <string name="rule_button">I agree to follow the rules</string>
    <string name="rule_a">Be nice and appropriate</string>
    <string name="rule_a_sub">Do not harass or share inappropriate photos</string>
    <string name="rule_b">Respect people\'s privacy</string>
    <string name="rule_b_sub">Do not post someone\'s private information</string>
    <string name="rule_c">Make the app better</string>
    <string name="rule_c_sub">Don\'t spam or share copyrighted photos</string>
    <string name="rule_final">If your photos continue to be downvoted or reported, you will be suspended</string>
    <string name="caution_top_message">Posting inappropriate hashtags and photos</string>
    <string name="caution_bottom_message">will get you suspended from the app.</string>
    <string name="second_featured">Featured</string>
    <string name="second_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in…</string>
    <string name="progress_signup">Signing you up…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_photo">NewPhotoActivity</string>
    <string name="post_placeholder">Add a few hashtags</string>
    <string name="post_back">Back</string>
    <string name="location_header">Choose your school:</string>
    <string name="title_activity_rules">RulesActivity</string>

</resources>
