<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hashtaglife.hashtaglife.RulesActivity">

    <RelativeLayout
        android:id="@+id/rules"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow0"
        android:clickable="false"
        >
        <Button
            android:id="@+id/action_button_rules"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:padding="0dp"
            android:textSize="20dp"
            android:textColor="@color/text"
            android:background="@color/green0"
            android:text="@string/rule_button" />
        <RelativeLayout
            android:layout_below="@+id/action_button_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >
            <TextView
                android:id="@+id/rule_a"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/rule_a"
                android:textSize="22dp"
                android:textColor="@color/text"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/rule__sub_a"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/rule_a"
                android:text="@string/rule_a_sub"
                android:textSize="20dp"
                android:textColor="@color/text"
                />
            <TextView
                android:id="@+id/rule_b"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/rule__sub_a"
                android:text="@string/rule_b"
                android:textSize="22dp"
                android:textColor="@color/text"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/rule__sub_b"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/rule_b"
                android:text="@string/rule_b_sub"
                android:textSize="20dp"
                android:textColor="@color/text"
                />
            <TextView
                android:id="@+id/rule_c"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/rule__sub_b"
                android:text="@string/rule_c"
                android:textSize="22dp"
                android:textColor="@color/text"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/rule__sub_c"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/rule_c"
                android:text="@string/rule_c_sub"
                android:textSize="20dp"
                android:textColor="@color/text"
                />
            <TextView
                android:id="@+id/rule_final"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@id/rule__sub_c"
                android:text="@string/rule_final"
                android:textSize="22dp"
                android:textColor="@color/text"
                android:textStyle="italic"
                />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
