<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hashtaglife.hashtaglife.WelcomeActivity"
    android:background="@color/red0"
    >

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:padding="0dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:textColor="@color/text"
        android:background="@color/blue0"

        />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/login_button"
        android:text="@string/signup"
        android:layout_marginTop="0dp"
        android:padding="0dp"
        android:textSize="20dp"
        android:textColor="@color/text"
        android:background="@color/green0"
        />

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:text="@string/legal_by"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text"
        />

    <TextView
        android:id="@+id/textview_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:text="@string/legal_by_1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text"
        />

    <TextView
        android:id="@+id/textview_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_2"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text"
        />


</RelativeLayout>
